[gd_scene load_steps=2 format=2]

[ext_resource path="res://network_updated.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 580.0
margin_bottom = 20.0

[node name="ServerButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_right = 85.0
margin_bottom = 20.0
text = "Start Server"

[node name="ClientButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 89.0
margin_right = 171.0
margin_bottom = 20.0
text = "Start Client"

[node name="SendButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 175.0
margin_right = 218.0
margin_bottom = 20.0
text = "Send"

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 222.0
margin_right = 580.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Status" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 24.0
margin_right = 580.0
margin_bottom = 38.0

[node name="Log" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 42.0
margin_right = 580.0
margin_bottom = 56.0

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/ServerButton" to="CanvasLayer/VBoxContainer" method="_on_ServerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/ClientButton" to="CanvasLayer/VBoxContainer" method="_on_ClientButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/SendButton" to="CanvasLayer/VBoxContainer" method="_on_SendButton_pressed"]
[connection signal="text_changed" from="CanvasLayer/VBoxContainer/HBoxContainer/TextEdit" to="CanvasLayer/VBoxContainer" method="_on_TextEdit_text_changed"]
